--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
         <div class="container">
           <ul class="features-list list">
             <li class="features-item">
+              <div>
               <svg class="feature-icon" width="50" height="50">
                 <use href="./images/icons.svg.svg#icon-antenna"></use>
               </svg>
+              </div>
               <h3 class="features-title">Увага до деталей</h3>
               <p class="features-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -109,9 +111,11 @@
             </li>
 
             <li class="features-item">
+              <div>
               <svg class="feature-icon" width="66" height="70">
                 <use href="./images/icons.svg.svg#icon-clock"></use>
               </svg>
+              </div>
               <h3 class="features-title">Пунктуальність</h3>
               <p class="features-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -378,12 +382,12 @@
           <ul class="clients-list list">
             <li class="clients-item">
               <a href="" class="clients-link">
-                <svg class="clients-log" width="170" height="92">
+                <svg class="clients-log" width="106" height="60">
                   <use href="./images/icons.svg.svg#icon-logo-yaco"></use></svg></a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link">
-                  <svg class="clients-log" width="170" height="92">
+                  <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
                   </svg>
@@ -391,26 +395,26 @@
             </li>
             <li class="clients-item">
               <a href="" class="clients-link">
-                <svg class="clients-log" width="170" height="92">
+                <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-company"></use></svg></a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link"
-                ><svg class="clients-log" width="170" height="92">
+                ><svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-foster-peters"></use></svg></a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link"> 
-                <svg class="clients-log" width="170" height="92">
+                <svg class="clients-log" width="106" height="60">
                   <use href="./images/icons.svg.svg#icon-logo-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link">
-                <svg class="clients-log" width="170" height="92">
+                <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-tig-line"></use>
                 </svg>
