The end lesson4

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a
-            href="https://i.imgur.com/KmzYQjf.png"
+            href="./index.html"
             lang="en"
             class="header-link-log link"
             ><span>Web</span>Studio</a
@@ -138,7 +138,7 @@
             <li class="features-item">
               <div class="feature-icon" >
               <svg class="feature-icon-svg" width="70" height="70">
-                <use href="./images/icons.svg.svg#icon-astronaut"></use>
+                <use href="./index.html"></use>
               </svg>
               </div>
               <h3 class="features-title">Сучасні технології</h3>
@@ -385,12 +385,12 @@
           <h2 class="clients-title">Постійні клієнти</h2>
           <ul class="clients-list list">
             <li class="clients-item">
-              <a href="" class="clients-link">
+              <a href="./index.html" class="clients-link">
                 <svg class="clients-log" width="106" height="60">
                   <use href="./images/icons.svg.svg#icon-logo-yaco"></use></svg></a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link">
+              <a href="./index.html" class="clients-link">
                   <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-taglin-here"></use>
@@ -398,26 +398,26 @@
                 </a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link">
+              <a href="./index.html" class="clients-link">
                 <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-company"></use></svg></a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link"
+              <a href="./index.html" class="clients-link"
                 ><svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-foster-peters"></use></svg></a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link"> 
+              <a href="./index.html" class="clients-link"> 
                 <svg class="clients-log" width="106" height="60">
                   <use href="./images/icons.svg.svg#icon-logo-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
-              <a href="" class="clients-link">
+              <a href="./index.html" class="clients-link">
                 <svg class="clients-log" width="106" height="60">
                   <use
                     href="./images/icons.svg.svg#icon-logo-tig-line"></use>
