--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
       <div class="container header-container">
         <nav class="header-nav">
           <a
-            href="https://i.imgur.com/KmzYQjf.png"
+            href="./index.html"
             lang="en"
             class="header-link-log link"
             ><span>Web</span>Studio</a
@@ -43,7 +43,7 @@
           <ul class="header-list list">
             <li class="header-item">
               <a
-                href="https://i.imgur.com/fbQEZqo.png"
+                href="./index.html"
                 rel="noopener noreferrer nofollow"
                 class="header-link link"
               >
@@ -90,7 +90,7 @@
     <main>
       <section class="filter">
         <div class="container">
-          <h2 class="visually-hidden">Меню работ</h2>
+          <h2 class="visually-hidden">Меню рабіт</h2>
           <ul class="filter-list list">
             <li class="filter-item">
               <button type="button" class="filter-btn">Усі</button>
@@ -114,7 +114,7 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP1-min.jpg"
-                  alt="фотография веб-сайта"
+                  alt="фотографія веб-сайта"
                   width="370"
                   class="product-img"
                 />
@@ -128,7 +128,7 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP2-min.jpg"
-                  alt="фотография дизайна"
+                  alt="фотографія дизайна"
                   width="370"
                   class="product-img"
                 />
@@ -142,14 +142,14 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP3-min.jpg"
-                  alt="фотография Приложения"
+                  alt="фотографія Додатка"
                   width="370"
                   class="product-img"
                 />
 
                 <div class="product">
                   <h3 class="product-name">Ресторан Seafood</h3>
-                  <p class="product-specialization">Приложение</p>
+                  <p class="product-specialization">Додаток</p>
                 </div>
               </a>
             </li>
@@ -157,12 +157,12 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP4-min.jpg"
-                  alt="фотография маркетинга"
+                  alt="фотографія маркетинга"
                   width="370"
                   class="product-img"
                 />
                 <div class="product">
-                  <h3 class="product-name">Проект Prime</h3>
+                  <h3 class="product-name">Проєкт Prime</h3>
                   <p class="product-specialization">Маркетинг</p>
                 </div>
               </a>
@@ -171,13 +171,13 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP5-min.jpg"
-                  alt="фотография приложения 2"
+                  alt="фотографія додатка 2"
                   width="370"
                   class="product-img"
                 />
                 <div class="product">
-                  <h3 class="product-name">Проект Boxes</h3>
-                  <p class="product-specialization">Приложение</p>
+                  <h3 class="product-name">Проєкт Boxes</h3>
+                  <p class="product-specialization">Додаток</p>
                 </div>
               </a>
             </li>
@@ -185,7 +185,7 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP6-min.jpg"
-                  alt="фотография веб-сайта 2"
+                  alt="фотографія веб-сайта 2"
                   width="370"
                   class="product-img"
                 />
@@ -199,12 +199,12 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP7-min.jpg"
-                  alt="фотография дизайна 2"
+                  alt="фотографія дизайна 2"
                   width="370"
                   class="product-img"
                 />
                 <div class="product">
-                  <h3 class="product-name">Издание Limited Edition</h3>
+                  <h3 class="product-name">Видання Limited Edition</h3>
                   <p class="product-specialization">Дизайн</p>
                 </div>
               </a>
@@ -213,12 +213,12 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP8-min.jpg"
-                  alt="фотография маркетинга 2"
+                  alt="фотографія маркетинга 2"
                   width="370"
                   class="product-img"
                 />
                 <div class="product">
-                  <h3 class="product-name">Проект LAB</h3>
+                  <h3 class="product-name">Проєкт LAB</h3>
                   <p class="product-specialization">Маркетинг</p>
                 </div>
               </a>
@@ -227,13 +227,13 @@
               <a href="" class="product-link">
                 <img
                   src="./images/imgP9-min.jpg"
-                  alt="фотография приложения 2"
+                  alt="фотографія додатка 2"
                   width="370"
                   class="product-img"
                 />
                 <div class="product">
                   <h3 class="product-name">Growing Business</h3>
-                  <p class="product-specialization">Приложение</p>
+                  <p class="product-specialization">Додаток</p>
                 </div>
               </a>
             </li>
@@ -245,7 +245,7 @@
       <div class="container footer-container">
         <div class="footer-left-part">
           <a
-            href="https://i.imgur.com/SfubzdW.png"
+            href="./index.html"
             lang="en"
             class="footer-log link"
             ><span>Web</span>Studio</a
