--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <li class="features-item">
               <div class="feature-icon" >
               <svg class="feature-icon-svg" width="70" height="70">
-                <use href="./index.html"></use>
+                <use href="./images/icons.svg.svg#icon-astronaut"></use>
               </svg>
               </div>
               <h3 class="features-title">Сучасні технології</h3>
